tests/functional/lang/eval-fail-toJSON.err.exp
error:
       … while calling the 'toJSON' builtin
         at /pwd/lang/eval-fail-toJSON.nix:1:1:
            1| builtins.toJSON {
             | ^
            2|   a.b = [

       … while evaluating attribute 'a'
         at /pwd/lang/eval-fail-toJSON.nix:2:3:
            1| builtins.toJSON {
            2|   a.b = [
             |   ^
            3|     true

       … while evaluating attribute 'b'

       … while evaluating list element at index 3

       … while evaluating attribute 'c'
         at /pwd/lang/eval-fail-toJSON.nix:7:7:
            6|     {
            7|       c.d = throw "hah no";
             |       ^
            8|     }

       … while evaluating attribute 'd'

       … while calling the 'throw' builtin
         at /pwd/lang/eval-fail-toJSON.nix:7:13:
            6|     {
            7|       c.d = throw "hah no";
             |             ^
            8|     }

       error: hah no
